--- a/src/components/layout/Navbar/Navbar.module.css
+++ b/src/components/layout/Navbar/Navbar.module.css
@@ -20,10 +20,11 @@
 }
 
 .logo {
-  font-size: 26px;
+  font-size: 36px;
   font-weight: 700;
   color: #B17457; /* Замінено на 4A4947 */
   text-decoration: none;
+  font-family: 'Afacad', sans-serif;
 }
 
 .navLinks {
